<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>repox-system</artifactId>
		<groupId>repox</groupId>
		<version>2.3.5</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>repox-gui</artifactId>
	<packaging>war</packaging>

	<organization>
		<name>Instituto Superior Técnico</name>
		<url>http://www.ist.utl.pt</url>
	</organization>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.4.0</version>
				<executions>
					<execution>
						<configuration>
							<style>OBFUSCATED</style>
							<extraJvmArgs>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</extraJvmArgs>
							<!--Can't disable these unneeded artifacts, so compile them outside 
								of the target WAR -->
							<deploy>${project.build.directory}/gwt-deploy</deploy>
						</configuration>
						<goals>
							<goal>compile</goal>
							<!--<goal>generateAsync</goal> -->
							<!--<goal>test</goal> -->
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<!-- Not active repositories -->
	<!-- <distributionManagement> -->
	<!-- <snapshotRepository> -->
	<!-- <id>digmap3</id> -->
	<!-- <name>digmap3-snapshots</name> -->
	<!-- <url>http://digmap3.ist.utl.pt:8080/artifactory/libs-snapshot-local</url> -->
	<!-- </snapshotRepository> -->
	<!-- <repository> -->
	<!-- <id>digmap3</id> -->
	<!-- <name>digmap3-releases</name> -->
	<!-- <url>http://digmap3.ist.utl.pt:8080/artifactory/libs-release-local</url> -->
	<!-- </repository> -->
	<!-- </distributionManagement> -->

	<repositories>
		<repository>
			<id>maven-repositories</id>
			<url>http://mvnrepository.com</url>
		</repository>
		<repository>
			<id>central OSS Repository</id>
			<url>https://oss.sonatype.org/content/repositories/releases/</url>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>europeana</id>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<excludes>
							<exclude>configuration.properties</exclude>
						</excludes>
					</resource>
					<resource>
						<directory>src/main/profiles/europeana</directory>
					</resource>
					<resource>
						<directory>src/main/resources</directory>
						<excludes>
							<exclude>gui.properties</exclude>
						</excludes>
					</resource>
					<resource>
						<directory>src/main/profiles/europeana</directory>
					</resource>
				</resources>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<!--REPOX Core Libs -->
		<!-- <dependency> -->
		<!-- <groupId>repox</groupId> -->
		<!-- <artifactId>repox-core</artifactId> -->
		<!-- </dependency> -->
		
		<dependency>
			<groupId>repox</groupId>
			<artifactId>repox-europeana</artifactId>
		</dependency>

		<!-- Non existent dependency -->
		<!--<dependency> -->
		<!--<groupId>repox</groupId> -->
		<!--<artifactId>repox-eudml</artifactId> -->
		<!--<version>2.0.0</version> -->
		<!--</dependency> -->
		<!-- Non existent dependency -->

		<!--Ext GWT Libs -->
		<dependency>
			<groupId>gxt</groupId>
			<artifactId>gxt</artifactId>
			<classifier>gwt22</classifier>
		</dependency>

		<!--GWT Core Libs -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<exclusions>
				<exclusion>
					<groupId>commons-io</groupId>
					<artifactId>commons-io</artifactId>
				</exclusion>
			</exclusions>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>

		<!--XML Parse Libs -->
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
		</dependency>

		<!--Calendar Libs -->
		<dependency>
			<groupId>com.bradrydzewski</groupId>
			<artifactId>gwt-cal</artifactId>
		</dependency>
		<dependency>
			<groupId>com.allen-sauer.gwt.dnd</groupId>
			<artifactId>gwt-dnd</artifactId>
		</dependency>

		<!--Password Gen Lib -->
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
		</dependency>
		<!--RSS Lib -->
		<dependency>
			<groupId>rome</groupId>
			<artifactId>rome</artifactId>
		</dependency>

		<!-- LDAP Libs -->
		<dependency>
			<groupId>com.novell.ldap</groupId>
			<artifactId>jldap</artifactId>
		</dependency>

		<!-- Testing Libs -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<!-- This is a previous verrion <version>4.11</version> -->
		</dependency>

		<!--XMApper Libs -->
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>mdr-mapping-ui-svg</artifactId>
		</dependency>
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>mdr-system</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>jcl-over-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>xml-mapping-compiler</artifactId>
		</dependency>
		<dependency>
			<groupId>pt.ist</groupId>
			<artifactId>xslt-om</artifactId>
		</dependency>

	</dependencies>
</project>